cluster-metal/dpg-processing/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: http-processing-webserver
  namespace: deeppharmgraph
spec:
  parentRefs:
    - name: http-gateway
      namespace: kube-system
  hostnames: [dpg-processing.shamrock.systems]
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: dpg-processing-airflow-webserver
          port: 8080
